# VicosATRV

./: README.md
CAD/: VICOS.stl  eyering.stl  facetest.stl  mountholeplate.stl  mouthbackplate.stl  mouthdiffuser.stl  mouthdiffuser2.stl  mouthplatebig.stl  neckmounttest.stl  realsensecover.stl  ring.stl  untitled.stl
CAD/Parts/: Logitech_C920.stl  M3x16.stl  M3x20.stl  M3x30.stl  M3x40.stl  led.stl  nut.stl  standoff.stl
source/face_led/: CMakeLists.txt  README.md  led_controller.py  package.xml  setup.py
source/face_led/launch/: idle_pantilt.launch
source/face_led/nodes/: demo.py  idle_anim.py  led_controller.py
source/flir_ptu_driver/launch/: ptu.launch
source/robobrain/: CMakeLists.txt  README.md  package.xml  setup.py
