<?xml version="1.0"?>
<package>
  <name>face_led</name>
  <version>1.0.0</version>
  <description>Arduino based control of WS2818 rings and led strips.</description>
  <maintainer email="vr4189@student.uni-lj.si">Vid Rijavec</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>rospy</run_depend>
</package>
